--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="actions">
-    <%= link_to 'Create a new patient', new_patient_path, class: 'btn btn-default' %>
+    <%= link_to 'Create a new patient', new_patient_path, class: 'btn btn-primary' %>
   </div>
 </div>
   
