--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="actions">
-    <%= link_to new_sample_path, class: 'btn btn-default' do %>
+    <%= link_to new_sample_path, class: 'btn btn-primary' do %>
       <%= fa_icon 'archive', text: 'A new sample has arrived' %>
     <% end %>
   </div>
