--- a/app/views/dna_extractions/_form.html.erb
+++ b/app/views/dna_extractions/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_area :notes %>
   </div>
   <div class="actions">
-    <%= f.submit 'Create the Dna Extraction', class: 'btn btn-primary' %>
+    <%= f.submit button_text, class: 'btn btn-primary' %>
   </div>
 <% end %>
