--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -15,43 +15,55 @@
 
 <p id="notice"><%= notice %></p>
 
-<%= render 'shared/search_form' %>
+<% @studies_by_year_and_project.each do |year, year_studies| %>
+    <div class="js-year-<%= year %>">
+        <h2><%= year %></h2>
 
-<table class="table table-striped table-condensed">
-  <thead>
-    <tr>
-      <th>Project</th>
-      <th>Patient</th>
-      <th>Tag</th>
-      <th>Note</th>
-      <th>Institution</th>
-      <th>Doctor full name</th>
-      <th>Doctor email</th>
-      <th>Request date</th>
-      <th>Admission date</th>
-      <th>Request category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+        <% year_studies.each do |project, project_studies| %>
+            <div class="js-project-<%= project.tag %>">
+                <h3><%= project.full_name or project.tag %></h3>
 
-  <tbody>
-    <% @studies.each do |study| %>
-      <tr>
-        <td><%= study.project %></td>
-        <td><%= study.patient %></td>
-        <td><%= study.tag %></td>
-        <td><%= study.note %></td>
-        <td><%= study.institution %></td>
-        <td><%= study.doctor_full_name %></td>
-        <td><%= study.doctor_email %></td>
-        <td><%= study.request_date %></td>
-        <td><%= study.admission_date %></td>
-        <td><%= study.request_category %></td>
-        <td><%= link_to 'Show', study %></td>
-        <td><%= link_to 'Edit', edit_study_path(study) %></td>
-        <td><%= link_to 'Destroy', study, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                <table class="table table-striped table-condensed">
+                    <thead>
+                        <tr>
+                        <th>Tag</th>
+                        <th>Patient</th>
+                        <th>Doctor</th>
+                        <th>Institution</th>
+                        <th>Request date</th>
+                        <th>Admission date</th>
+                        <th>Request<br>category</th>
+                        <th colspan="3"></th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <% project_studies.each do |study| %>
+                            <tr>
+                                <td class="tag--bold" title="ID: <%= study.id %>">
+                                    <%= study.tag %>
+                                </td>
+                                <td><%= study.patient.full_name %></td>
+                                <td><%= study.doctor_full_name %></td>
+                                <td><%= study.institution %></td>
+                                <td title="<%= study.request_date %>">
+                                    <%= study.request_date_ago %>
+                                </td>
+                                <td title="<%= study.admission_date %>">
+                                    <%= study.admission_date_ago %>
+                                </td>
+                                <td class="tag">
+                                    <%= study.request_category.downcase[0..2] %>
+                                </td>
+                                <td><%= link_to 'Show', study %></td>
+                                <td><%= link_to 'Edit', edit_study_path(study) %></td>
+                                <td><%= link_to 'Destroy', study, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            </div>
+        <% end %>
+    </div>
+<% end %>
 
