--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,12 +1,25 @@
+<div class="header">
+  <div class="title">
+    <h1>
+      <%= fa_icon 'tag' %>
+      Project
+    </h1>
+  </div>
+
+  <div class="actions">
+    <%= link_to new_project_path, class: 'btn btn-primary' do %>
+      Create a new Project
+    <% end %>
+  </div>
+</div>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Projects</h1>
-
-<table>
+<table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Full name</th>
       <th>Tag</th>
+      <th>Full name</th>
       <th>Description</th>
       <th>Old</th>
       <th colspan="3"></th>
@@ -16,18 +29,19 @@
   <tbody>
     <% @projects.each do |project| %>
       <tr>
+        <td class="project-tag <%= project.tag.downcase %>">
+          <%= project.tag %>
+        </td>
         <td><%= project.full_name %></td>
-        <td><%= project.tag %></td>
         <td><%= project.description %></td>
         <td><%= project.old_id %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Destroy', project, method: :delete,
+              data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
