--- a/app/views/samples/_form.html.erb
+++ b/app/views/samples/_form.html.erb
@@ -1,112 +1,24 @@
 <div class="row">
   <div class="col-sm-12">
     <%= bootstrap_form_for(@sample) do |f| %>
+
       <% if @sample.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@sample.errors.count, "error") %> prohibited this sample from being saved:</h2>
+            <h2><%= pluralize(@sample.errors.count, "error") %>
+            prohibited this sample from being saved:</h2>
 
           <ul>
-          <% @sample.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
+            <% @sample.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
           </ul>
         </div>
       <% end %>
 
       <div class="field">
-        <label class="control-label">Select an existing patient</label><br>
-        <%= collection_select(:sample, :patient_id, Patient.all.decorate.reverse,
-                              :id, :select_option,
-                              {prompt: 'Type a name, last name, ID, project tag...'},
-                              {class: 'form-control'}) %>
-
+        <%= f.text_field :tag %>
       </div>
 
-      <div class="field">
-        <label class="control-label">Or create a new patient</label><br>
-                            
-        <fieldset id='patient'>
-          <div class="field">
-            <%= text_field_tag 'patient[first_name]', nil, placeholder: 'Patient first name', class: 'form-control' %>
-          </div>
-          <div class="field">
-            <%= text_field_tag 'patient[last_name]', nil, placeholder: 'Patient last name', class: 'form-control' %>
-          </div>
-          <div class="field">
-            <%= text_field_tag 'patient[acronym]', nil, placeholder: 'Patient acronym', class: 'form-control' %>
-          </div>
-          <div class="field">
-            <div class="rails-bootstrap-forms-date-select">
-              Date of birth:
-              <%= date_select 'patient', 'birthdate', {start_year: 1915, end_year: Date.today.year, include_blank: true, default: nil }, class: 'form-control' %>
-            </div>
-          </div>
-        </fieldset>
-
-      </div>
-
-      <div class="field">
-        <label class="control-label">Project</label><br>
-        <%= collection_radio_buttons(:sample, :project_id, Project.order(:tag), :id, :tag) do |b| %>
-          <%= b.label(class: "radio-inline") do %>
-            <%= b.radio_button %>
-            <span class="project-tag <%= b.text.downcase %>"><%= b.text %></span>
-          <% end %>
-        <% end %>
-      </div>
-
-      <div class="field">
-        <%= f.text_field :institution %>
-
-        <div class="btn-group existing-options">
-          <% @form_options[:institutions].each do |institution| %>
-            <button type="button" class="btn btn-default option">
-              <%= institution %>
-            </button>
-          <% end %>
-        </div>
-      </div>
-
-      <div class="field">
-        <%= f.text_field :doctor_full_name %>
-
-        <div class="btn-group existing-options">
-          <% @form_options[:doctor_names].each do |doctor_name| %>
-            <button type="button" class="btn btn-default option">
-              <%= doctor_name %>
-            </button>
-          <% end %>
-        </div>
-      </div>
-
-      <div class="field">
-        <%= f.text_field :doctor_email %>
-
-        <div class="btn-group existing-options">
-          <% @form_options[:doctor_emails].each do |doctor_email| %>
-            <button type="button" class="btn btn-default option">
-              <%= doctor_email %>
-            </button>
-          <% end %>
-        </div>
-      </div>
-      <div class="field">
-        <%= f.date_select :request_date, { include_blank: true, default: nil, start_year: Date.today.year - 1, end_year: Date.today.year } %>
-      </div>
-      <div class="field">
-        <%= f.date_select :admission_date %>
-      </div>
-      <div class="field">
-        <%= f.text_field :request_category %>
-
-        <div class="btn-group existing-options">
-          <% @form_options[:request_categories].each do |request_category| %>
-            <button type="button" class="btn btn-default option">
-              <span class="mono-font"><%= request_category %></span>
-            </button>
-          <% end %>
-        </div>
-      </div>
       <div class="field">
         <%= f.text_area :notes %>
       </div>
