--- a/app/views/studies/new.html.erb
+++ b/app/views/studies/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Study</h1>
+<div class="header">
+  <div class="title">
+    <h1>
+      <%= fa_icon 'id-card' %>
+      Create a new Study
+    </h1>
+  </div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', studies_path %>
+<%= render partial: 'form', locals: { submit_button_text: 'Create this Study' } %>
