--- a/app/views/samples/index.html.erb
+++ b/app/views/samples/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class="actions">
     <%= link_to new_sample_path, class: 'btn btn-primary' do %>
-      <%= fa_icon 'archive', text: 'A new sample has arrived' %>
+      Manually create a new sample
     <% end %>
   </div>
 </div>
@@ -21,14 +21,15 @@
     <table class='table table-striped table-condensed'>
       <thead>
         <tr>
+          <th>Study</th>
+          <th>Tag or Old ID</th>
           <th>Project</th>
-          <th>ID</th>
           <th>Patient</th>
           <th>Extractions</th>
           <th>Institution</th>
           <th>Request date</th>
           <th>Admission date</th>
-          <th>Request category</th>
+          <th>Request<br>category</th>
         </tr>
       </thead>
 
@@ -37,8 +38,11 @@
 
           <!-- Main row -->
           <tr class="display-row collapsed" data-toggle="collapse" data-target="#detail-<%= sample.id %>" class="accordion-toggle">
-            <td class="project-tag"><%= sample.project.decorate.html_tag %></td>
-            <td><%= sample.id %></td>
+            <td><%= sample.study.tag %></td>
+            <td><%= sample.tag || sample.old_id %></td>
+            <td class="project-tag">
+              <%= sample.project.decorate.html_tag %>
+            </td>
             <td><%= sample.patient.full_name %></td>
             <td><%= safe_join(sample.dna_extractions.map{ fa_icon 'tint', class: ["grey", "small"] }) %></td>
             <td><%= sample.institution %></td>
