--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -33,6 +33,7 @@
                         <th>Request date</th>
                         <th>Admission date</th>
                         <th>Request<br>category</th>
+                        <th>Samples</th>
                         <th colspan="3"></th>
                         </tr>
                     </thead>
@@ -54,6 +55,12 @@
                                 </td>
                                 <td class="tag">
                                     <%= study.request_category.downcase[0..2] %>
+                                </td>
+                                <td>
+                                  <% study.samples.each do |sample| %>
+                                    <%= link_to sample.tag || sample.old_id, sample_path(sample) %>
+                                    <br>
+                                  <% end %>
                                 </td>
                                 <td><%= link_to 'Show', study %></td>
                                 <td><%= link_to 'Edit', edit_study_path(study) %></td>
